# 100-days-of-code

./: README.md
day-001/: main.py
day-002/: main.py
day-003/: main.py
day-004/: main.py
day-005/: main.py
day-007/: main.py
day-008/: main.py
day-009/: main.py
day-010/: art.py  main.py
day-011/: main.py
day-012/: main.py
day-014/: main.py
day-015/: main.py
day-016/: main.py  pyproject.toml
day-017/: data.py  main.py  quiz_brain.py
day-018/: main.py  pyproject.toml
day-019/: main.py
day-020/: main.py  snake.py
day-021/: main.py  scoreboard.py  snake.py
day-022/: ball.py  main.py
day-023/: car_manager.py  main.py  player.py
day-024/: main.py
day-025/: pyproject.toml
day-026/: main.py  pyproject.toml
day-027/: main.py
day-028/: main.py
day-029/: data.txt  main.py  pyproject.toml
day-030/: data.json  main.py
day-031/: main.py
