[tool.poetry]
name = "day-016"
version = "0.1.0"
description = "Day 16 project"
authors = ["Jake Clayton <jake.clayton@localsearch.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
