[tool.poetry]
name = "day-018"
version = "0.1.0"
description = ""
authors = ["Jake Clayton <jake.clayton@localsearch.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"
"colorgram.py" = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
