[tool.poetry]
name = "day-025"
version = "0.1.0"
description = ""
authors = ["Jake Clayton <jake.clayton@localsearch.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
